# Inspectra-AI-Version-0.001

./: .gitignore  .replit  DEPLOY_KEEP_ALIVE.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  README.md  pnpm-lock.yaml  pyproject.toml  render-build.sh  render.yaml  replit.md  requirements.txt  start.sh  vercel.json
.github/workflows/: keep-alive.yml
.migration-backup/: .dockerignore  .replit  DEPLOY_KEEP_ALIVE.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  Dockerfile  RENDER_FIX_START_COMMAND.txt  start.bat
.migration-backup/.github/workflows/: ci.yml
.migration-backup/api/: index.py
.migration-backup/backend/: main.py  requirements.txt
.migration-backup/backend/api/: index.py  router.py
.migration-backup/backend/data/: lab_specs.json
.migration-backup/backend/reports/: ttdc_report_generator.py
.migration-backup/backend/services/: material_analyzer.py
.migration-backup/deploy/render-shim/: inspectra_gunicorn_shim.py
.migration-backup/frontend/: next.config.ts  package.json  requirements.txt  vercel.json
.migration-backup/frontend/api/: index.py
api/: index.py
artifacts/inspectra/: index.html  package.json
backend/: main.py  requirements.txt
backend/api/: router.py
backend/middleware/: __init__.py  workspace.py
backend/reports/: csp_report_generator.py  pdf_generator.py  ttdc_report_generator.py
backend/services/: analysis_explainer.py  batch_statistics.py  csp_analyzer.py  image_processor.py
deploy/render-shim/: setup.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  vercel.json
frontend/scripts/: sync-backend.mjs
(+41 files in other folders)
