[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "numpy>=2.0.0,<2.2.0",
    "opencv-python-headless>=4.10.0,<4.12.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0,<5.0.0",
    "scikit-image>=0.24.0,<0.26.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
]
